# AGENT

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Start-BNCT-Agent.cmd  launch_gui.pyw  pyproject.toml
sample_data/: deidentified_case.json
skills/archive-extract/: SKILL.md
skills/archive-extract/scripts/: extract_archive.py
skills/code-review/: SKILL.md
skills/create-excel/: SKILL.md
skills/create-ppt/: SKILL.md
skills/create-word/: SKILL.md
skills/debug/: SKILL.md
skills/dicom-tags/: SKILL.md
skills/dicom-tags/scripts/: parse_dicom.py
skills/pdf-extract/: SKILL.md
skills/pdf-extract/scripts/: extract_pdf.py
skills/run/: SKILL.md
skills/tps-build-debug/: SKILL.md
skills/tps-build-diagnose/: SKILL.md
skills/tps-build-release/: SKILL.md
skills/verify/: SKILL.md
skills/web-search/: SKILL.md
src/bnct_tps_agent/: __init__.py  agent.py  audit.py  build_tools.py  cli.py  config.py  dicom_tools.py  gui.py  memory.py  office_tools.py  project_tools.py  providers.py  safety.py  sessions.py  skill_installer.py  skills.py  tool_registry.py  tps_tools.py  web_search.py  web_server.py
src/bnct_tps_agent/web/: app.js  index.html  styles.css
tests/: test_audit_and_privacy.py  test_build_tools.py  test_gui_helpers.py  test_office_tools.py  test_project_tools.py  test_providers_and_agent.py  test_safety.py  test_skill_install.py  test_tps_tools.py  test_web_search.py  test_web_server.py
tests/fixtures/: rejected_identifier_snapshot.json  valid_snapshot.json
